<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:gravity="center"
android:orientation="vertical"
android:background="@drawable/ic_bg"
tools:context=".MainActivity">

<TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login_page"
    android:gravity="center"
    android:textSize="20sp"
    android:textColor="@color/white"
    android:textStyle="bold"/>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    app:cardBackgroundColor="@color/white"
    android:padding="200dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/txt_greet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textStyle="bold"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/usertxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autofillHints="name"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="15dp" />

        <EditText
            android:id="@+id/passtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="text"
            android:padding="15dp" />

        <Button
            android:id="@+id/lg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            android:textColor="@color/white"
            android:background="@color/design_default_color_primary"
            android:textSize="16sp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>

</LinearLayout>