<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
tools:context=".MainActivity2">

    <TextView
        android:id="@+id/wel_pg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/welcome_to_your_dashboard"
        android:textStyle="bold"
        android:textSize="25sp"
        android:padding="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/user_prof"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/user_profile"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/course_out"
                android:layout_width="139dp"
                android:layout_height="62dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/course_outline"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="155dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/res"
                android:layout_width="125dp"
                android:layout_height="62dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/results"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fee"
                android:layout_width="134dp"
                android:layout_height="62dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/fees"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>